src/objects/loan__Charge_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Accrue_Interest_From__c</fullName>
        <label>Accrue Interest From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Charge Interfaces</relationshipLabel>
        <relationshipName>Charge_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Name__c</fullName>
        <label>Fee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Charge Interfaces</relationshipLabel>
        <relationshipName>Charge_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_Id__c</fullName>
        <label>Incoming Loan Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Accrual_Date__c</fullName>
        <label>Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_External_ID__c</fullName>
        <label>Loan External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Charge Interfaces</relationshipLabel>
        <relationshipName>Charge_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Charge Interface</label>
    <nameField>
        <label>Charge Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Accrual_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Accrue_Interest_From__c &gt;  loan__Date__c</errorConditionFormula>
        <errorDisplayField>loan__Accrue_Interest_From__c</errorDisplayField>
        <errorMessage>Accrue Interest from date must be greater than charge date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Greater_than_charge_date</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Last_Accrual_Date__c &gt;  loan__Date__c</errorConditionFormula>
        <errorDisplayField>loan__Last_Accrual_Date__c</errorDisplayField>
        <errorMessage>Last accrual date cannot be less than charge date</errorMessage>
    </validationRules>
</CustomObject>